# openagents

./: .ai-activity.md  .askama.toml  .babel.mjs.json  .biomeignore  .dockerignore  .editorconfig  .env  .env.example  .env.local  .env.local.example  .env.testing  .gcloudignore  .gitignore  .mcp.json  .npmrc  .swiftformat  .swiftlint.yml  2026-05-22-pylon-v0.2-wallet-security-release-readiness-review.md  AGENTS-new.md  AGENTS-old.md  AGENTS.md  AGENT_FOUNDATIONS.md  AUTHORITY.md  AUTOPILOT_SESSION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODER.md  CRITICAL-INFRASTRUCTURE-FAILURE.md  CRITICAL_BLOCKER_environment_setup.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  EMERGENCY-MANUAL-ISSUES.md  ENVIRONMENT_SETUP_ISSUE.md  FASTFOLLOW.md  FIX_SUBMISSION.patch  GEMINI.md  GLOSSARY.md  (+110 more)
apps/api/: .dev.vars.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
apps/autopilot-desktop/: .gitignore  AGENTS.md  Cargo.toml  README.md  bunfig.toml  electrobun.config.ts  index.html  move-font.sh  package.json  tsconfig.app.json  tsconfig.json  tsconfig.typecheck.json  vite.config.ts  vitest.config.ts
apps/autopilot-desktop-wgpu/: Cargo.toml
apps/deck/: Cargo.toml  README.md  build.rs  build.ts  wrangler.toml
apps/lightning-ops/: Cargo.toml  README.md  env.staging.example  package-lock.json  package.json  vitest.config.ts
apps/lightning-wallet-executor/: Cargo.toml  README.md  package-lock.json  package.json
apps/nexus-control/: Cargo.toml
apps/nexus-relay/: Cargo.toml  Dockerfile
apps/nip05-registrar/: .env.example  Cargo.toml
apps/onyx/: App.tsx  Cargo.toml  app.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/pylon/: .gitignore  Cargo.toml  README.md  bunfig.toml  index.html  openagentsinc-pylon-0.3.0-rc2.tgz  package.json  tsconfig.json  tsconfig.tests.json  typecheck-tests-baseline.json
apps/pylon-tui/: Cargo.toml
apps/runtime/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
backend/: .env.example  Cargo.toml  DEVELOPMENT.md  build.rs  package.json  spec.yaml
backend/.sqlx/: query-0f8f9b88833944a066d047ac79cc47c4cce79d1e40079f3fb9dbbba5d435971c.json  query-130108b310f9fc56cde8f8b073956b568cc3959f5da65f85fb9d7593e918280a.json  query-137dae6ee37af517001adb4b4f31a2a2057791d1ff4b9bb0c17676f1a84c1fde.json  query-14ed67df040445a6566cc57cd481e7046d6f878bc9460346d0a34fc3d6c946bc.json  query-19adaad0c38e415eeae55d11dc83d6f8793eb35238d332b2584d1d24099231f5.json  query-1bb08c8cb39b65779c301bce83a4baa654be2d556d3de3a1024062b26607d7a1.json  query-1be324708e14ec38b1a3df426f99d823dea877965d5f79b529daf20a771ecf04.json  query-23654a8682574e2f9e719a98ad83f5002a9483a1733d111076b760e7749e851f.json  query-248be338c0ab9b90fce1bbbe90a8c438c82d0b646e0dd81f505ddec38916860e.json  query-252ffa1036509bfa14c8cb2bb2ea2733545265a558ecf2e7df7f91291d156f07.json  query-2f1b63e9dd71f469bf00be7dd168dd19a60f51109dab01e02f8fe090de3c9df4.json  query-34f7158f20bf8d533473b0a4328bd197701752b0e3924dcc54d27fbf1e6f2cde.json  query-3945c99e8424104afa64a9d6259193bb9d3e028a1cf44b29bc9d0b58de778db8.json  query-396ac5a8a4e334a55b7a1294b723c00c575e4b93247559479bc07c73a54cc3b8.json  query-4460a8bff36c5b7dc3e3d9cdc3b485ce610f17f59b9ee20909fc84e277d8bd1c.json  query-4d4613589d1cf940d377714b86cb73940063557f29a4edb2b05e7220aa5c7786.json  query-4f63054be16f0484ae9b8db87ee9a9276da5878b0dae665181f7c04212c96406.json  query-5394376e779e08d19d63312ba59f73019fca444f7c721ba279bf4ebb7d5d374b.json  query-53e5d3388b29566bd59509390e68ff7d724ba61895d8eaf23cde371ceaa6fc1b.json  query-56bd537d6af1066985475db28432564d35f7adc109063cdb5d221a8c907fd137.json  query-648fc4c432133493051ad22475e88447b9d564f34185cb6b332d379b821c0ead.json  query-6529d38f537f5964cce7ae64afc4b535dbb1b2e79d9978fd7c458a65e16a5b5f.json  query-769a0afad54ca5dd0e9abccaadf55158c28a9012f6657649015b81859339bca4.json  query-7fb22589b23dcdd76dea83048e652cb2d084a8db31a94152766772ede910a49c.json  query-86e7b541ba304abf92a8ac77836c6a6041458bafa92ac42fdd9f3b74a20f7bad.json  query-898ebe2612d24d20aa8d7e87ace6ea6f52733a204460b822d99967292bb4d030.json  query-9671532d44a50027467ef906902f266ecc95d9debc0b86569d1e22facb9935f3.json  query-99a92947e0a949a4041ad740943396eef6820bc5853ea040e8caaf287bc43874.json  query-9a4ffdee9e6b662d5e625a3d923797023aa1c03e1b812479cd5e42b213d833e9.json  query-aae579cd2cad4acaffdf6eabc364549499e939195f80f678f7e04fe867af9e64.json  query-afd18f14da6d8400765b4c51083c05a8e0cce80151b580f326cc1216ee4b70f4.json  query-b6feba76f08506d1b626dd9b30aedf3ba60fbc03b7532906164bf0e7764291a3.json  query-c4af66aa8ec543db87d1e35c52e31796ecb2b88205f4d11fdc97540cd9c7b362.json  query-c6ebd04c2d24375cab0995120a70b29ad48bd5a1e1f27724a1d69b2c400f378a.json  query-cee3fed2fdbb3511f63f17f2eecfc32fa9abb20bb4b66aa30b5b1752519b18f8.json  query-df957316084f2b7d8089eedd68cdace621c8454ac835678afa02ed5dc7d9318e.json  query-ed3f99f7b163c624304df49ec85363b49efc447cdff6a8f168268cce407d2792.json  query-f19303410aec92a7af2df612842df1ffec3855f8a8f60d86287e84b3a29a840e.json  query-fbea3e4d9b16fa644afe0512529984c3f6dc2fc2122a80988ee190abca6d5df4.json  query-fd51cbbf3b2026dac00feb4f21bd288bda64dc05585480a52d52bc92e4a8929c.json  (+1 more)
backend/assets/: fonts.css  main.css
backend/migrations/: 20240126000000_create_chat_tables.sql  20250126023641_create_users_table.sql  20250217000000_add_pseudonym.sql
backend/src/: configuration.rs  filters.rs  lib.rs  main.rs  repomap.rs  routes.rs
backend/tests/: chat_database.rs  chat_router_integration.rs  deepseek.rs  groq.rs  model_router.rs  oidc_client.rs  oidc_signup.rs  ollama.rs  signup_flow.rs  solver.rs  user.rs
codex-rs/: .gitignore  Cargo.toml  README.md  clippy.toml  config.md  default.nix  justfile  rust-toolchain.toml  rustfmt.toml
codex-rs/ansi-escape/: Cargo.toml  README.md
codex-rs/apply-patch/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/chatgpt/: Cargo.toml  README.md
fm-bridge/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION-STATUS.md
harbor/: README.md  pyproject.toml
src-tauri/: Cargo.toml  dev.sh  tauri.conf.json
(+34998 files in other folders)
