[workspace]
resolver = "2"
members = [
    "apps/autopilot-desktop-wgpu",
    "crates/adjutant",
    "crates/agent",
    "crates/ai-server",
    "crates/arrow",
    "crates/autopilot_app",
    "crates/autopilot_ui",
    "crates/autopilot",
    "crates/autopilot-core",
    "crates/codex-client",
    "crates/codex-mcp",
    "crates/compute",
    "crates/dsrs",
    "crates/dsrs-macros",
    "crates/editor",
    "crates/frlm",
    "crates/gateway",
    "crates/gpt-oss",
    "crates/issues",
    "crates/lm-router",
    "crates/local-inference",
    "crates/manatap",
    "crates/nostr/core",
    "crates/nostr/client",
    "crates/openagents-utils",
    "crates/onyx",
    "crates/pylon",
    "crates/relay",
    "crates/runtime",
    "crates/rlm",
    "crates/spark",
    "crates/vim",
    "crates/voice",
    "crates/wgpui",
    "crates/protocol",
    "crates/testing",
    "crates/ws-test",
]

[workspace.lints.rust]
missing_docs = "allow"
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
# Enable pedantic lints for stricter code quality.
# Priority -1 so individual lint settings below override.
pedantic = { level = "warn", priority = -1 }

# --- Pedantic overrides (too noisy / not a fit for this codebase) ---
missing_errors_doc = "allow"              # Requires extensive documentation work
missing_panics_doc = "allow"              # Requires extensive documentation work
must_use_candidate = "allow"              # Very noisy, too subjective
doc_markdown = "allow"                    # Backticks in docs - low value for effort
similar_names = "allow"                   # Often false positives
too_many_lines = "allow"                  # Subjective function length
module_name_repetitions = "allow"         # FooModule::Foo patterns are common and fine
struct_excessive_bools = "allow"          # Sometimes structs legitimately need multiple bools
fn_params_excessive_bools = "allow"       # Sometimes functions legitimately need multiple bools
items_after_statements = "allow"          # Style preference, not harmful
uninlined_format_args = "allow"           # format!("{x}") vs format!("{}", x) is minor
return_self_not_must_use = "allow"        # Builder pattern returns

# --- Cast lints (many false positives when values are known to be in range) ---
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Note: cast_lossless is NOT allowed - prefer From::from() for clarity

# Default::default() vs TypeName::default() is a style preference
default_trait_access = "allow"

# Sometimes separate match arms are clearer even if bodies are identical
match_same_arms = "allow"

# Some async functions don't await but are async for API consistency or future use
unused_async = "allow"

# let..else is newer syntax; current style is fine
manual_let_else = "allow"

# Used underscore bindings are sometimes intentional for documentation
used_underscore_binding = "allow"

# &Option<T> vs Option<&T> - sometimes &Option is intentional
ref_option_ref = "allow"
ref_option = "allow"

# Appending format! to String - push_str with format is equivalent
format_push_string = "allow"

# Case-sensitive extension comparison is often intentional
case_sensitive_file_extension_comparisons = "allow"

# Unnecessary wrapping in Result - sometimes for API consistency
unnecessary_wraps = "allow"

# Passing by value when not consumed - often cleaner API design
needless_pass_by_value = "allow"

# Small Copy types by reference - often for API consistency
trivially_copy_pass_by_ref = "allow"

# Underscore-prefixed bindings - used for documentation or future use
no_effect_underscore_binding = "allow"

# Closure vs method reference - closure syntax is clearer: .map(|s| s.to_string())
redundant_closure_for_method_calls = "allow"

# --- Panic safety (deny any operations that could panic) ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Note: indexing_slicing lint is too strict and flags many safe uses.
# Instead, rely on careful code review and bounds checking.

# --- Prohibit all allow attributes (no exceptions) ---
allow_attributes = "deny"

# --- Allow large error types (good UX often needs rich context) ---
result_large_err = "allow"

# --- No debug macros in production code ---
dbg_macro = "deny"

# --- No incomplete code markers ---
todo = "deny"
unimplemented = "deny"

# --- Use tracing instead of println!/eprintln! in library code ---
# CLI crates can override via #![allow(...)] in lib.rs/main.rs
print_stdout = "deny"
print_stderr = "deny"

# =========================
# Recommended additions (optional, but very useful)
# =========================

# Prevent deadlocks / perf traps in async code.
await_holding_lock = "deny"

# Avoid exiting from library code; keep this in binaries if you need it.
exit = "deny"

# Intentionally leaking memory should be extremely rare.
mem_forget = "deny"

# Catch huge stack allocations (esp. in async code); tune as needed.
large_stack_arrays = "warn"

# Panics inside Result-returning functions are usually a smell; set to warn/deny as you prefer.
panic_in_result_fn = "warn"


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["OpenAgents"]
license = "CC-0"
publish = false

[workspace.dependencies]
# OpenAgents workspace crates
codex-client = { path = "crates/codex-client" }
issues = { path = "crates/issues" }
nostr = { path = "crates/nostr/core" }
dsrs = { path = "crates/dsrs" }
dsrs-macros = { path = "crates/dsrs-macros" }
openagents-utils = { path = "crates/openagents-utils" }
ai-server = { path = "crates/ai-server" }

# External crates
anyhow = "1.0.86"
async-trait = "0.1"
base64 = "0.22"
bytemuck = { version = "1.23", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
futures = "0.3"
hex = "0.4.3"
rand = "0.9"
bitcoin = "0.32.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
sha2 = "0.10"
signal-hook = "0.3"
insta = "1.34"
quickcheck = "1.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tracing = "0.1.40"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde", "js"] }
walkdir = "2.5"
wgpu = "24.0"
winit = "0.30"
pollster = "0.4"
once_cell = "1.19"

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16

[profile.release]
opt-level = 3
debug = "limited"
lto = "thin"
codegen-units = 1
