[workspace]
resolver = "2"
members = [
    "apps/autopilot-desktop",
    "crates/nostr/core",
    "crates/openagents-ios-domain",
    "crates/spark",
    "crates/wgpui-core",
    "crates/wgpui-render",
    "crates/wgpui",
]

[workspace.lints.rust]
missing_docs = "allow"
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
# Enable pedantic lints for stricter code quality.
# Priority -1 so individual lint settings below override.
pedantic = { level = "warn", priority = -1 }

# --- Pedantic overrides (too noisy / not a fit for this codebase) ---
missing_errors_doc = "allow"              # Requires extensive documentation work
missing_panics_doc = "allow"              # Requires extensive documentation work
must_use_candidate = "allow"              # Very noisy, too subjective
doc_markdown = "allow"                    # Backticks in docs - low value for effort
similar_names = "allow"                   # Often false positives
too_many_lines = "allow"                  # Subjective function length
module_name_repetitions = "allow"         # FooModule::Foo patterns are common and fine
struct_excessive_bools = "allow"          # Sometimes structs legitimately need multiple bools
fn_params_excessive_bools = "allow"       # Sometimes functions legitimately need multiple bools
items_after_statements = "allow"          # Style preference, not harmful
uninlined_format_args = "allow"           # format!("{x}") vs format!("{}", x) is minor
return_self_not_must_use = "allow"        # Builder pattern returns

# --- Cast lints (many false positives when values are known to be in range) ---
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Note: cast_lossless is NOT allowed - prefer From::from() for clarity

# Default::default() vs TypeName::default() is a style preference
default_trait_access = "allow"

# Sometimes separate match arms are clearer even if bodies are identical
match_same_arms = "allow"

# Some async functions don't await but are async for API consistency or future use
unused_async = "allow"

# let..else is newer syntax; current style is fine
manual_let_else = "allow"

# Used underscore bindings are sometimes intentional for documentation
used_underscore_binding = "allow"

# &Option<T> vs Option<&T> - sometimes &Option is intentional
ref_option_ref = "allow"
ref_option = "allow"

# Appending format! to String - push_str with format is equivalent
format_push_string = "allow"

# Case-sensitive extension comparison is often intentional
case_sensitive_file_extension_comparisons = "allow"

# Unnecessary wrapping in Result - sometimes for API consistency
unnecessary_wraps = "allow"

# Passing by value when not consumed - often cleaner API design
needless_pass_by_value = "allow"

# Small Copy types by reference - often for API consistency
trivially_copy_pass_by_ref = "allow"

# Underscore-prefixed bindings - used for documentation or future use
no_effect_underscore_binding = "allow"

# Closure vs method reference - closure syntax is clearer: .map(|s| s.to_string())
redundant_closure_for_method_calls = "allow"

# --- Panic safety (deny any operations that could panic) ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Note: indexing_slicing lint is too strict and flags many safe uses.
# Instead, rely on careful code review and bounds checking.

# --- Keep allow attributes visible; enforce growth control via local-ci allow-attrs gate ---
# This workspace lint is warning-level because not all crates opt into workspace lints yet.
# Critical crates are enforced through scripts/allow-attribute-gate.sh.
allow_attributes = "allow"

# --- Allow large error types (good UX often needs rich context) ---
result_large_err = "allow"

# --- No debug macros in production code ---
dbg_macro = "deny"

# --- No incomplete code markers ---
todo = "deny"
unimplemented = "deny"

# --- Use tracing instead of println!/eprintln! in library code ---
# CLI crates can override via #![allow(...)] in lib.rs/main.rs
print_stdout = "deny"
print_stderr = "deny"

# =========================
# Recommended additions (optional, but very useful)
# =========================

# Prevent deadlocks / perf traps in async code.
await_holding_lock = "deny"

# Avoid exiting from library code; keep this in binaries if you need it.
exit = "deny"

# Intentionally leaking memory should be extremely rare.
mem_forget = "deny"

# Catch huge stack allocations (esp. in async code); tune as needed.
large_stack_arrays = "warn"

# Panics inside Result-returning functions are usually a smell; set to warn/deny as you prefer.
panic_in_result_fn = "warn"

# --- Legacy style debt still present in retained wgpui crates ---
# These are temporarily allowed to keep MVP lane moving while focused issues
# burn down pane/runtime correctness and architecture priorities.
many_single_char_names = "allow"
float_cmp = "allow"
manual_midpoint = "allow"
map_unwrap_or = "allow"
struct_field_names = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow"
unused_self = "allow"
explicit_iter_loop = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
cast_lossless = "allow"
implicit_clone = "allow"
elidable_lifetime_names = "allow"
needless_continue = "allow"
inline_always = "allow"
used_underscore_items = "allow"
match_wildcard_for_single_variants = "allow"
single_match_else = "allow"
len_without_is_empty = "allow"
redundant_else = "allow"
unchecked_time_subtraction = "allow"
if_not_else = "allow"
needless_range_loop = "allow"
unnecessary_literal_bound = "allow"
field_reassign_with_default = "allow"
manual_clamp = "allow"
while_let_loop = "allow"


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["OpenAgents"]
license = "CC-0"
publish = false

[workspace.dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
rand = "0.9"
bitcoin = "0.32.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
insta = "1.34"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
wgpu = "24.0"
winit = "0.30"
pollster = "0.4"

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16

[profile.release]
opt-level = 3
debug = "limited"
lto = "thin"
codegen-units = 1
