[package]
name = "openagents"
version = "0.1.0"
edition = "2021"
default-run = "openagents"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "openagents"

[[bin]]
path = "src/bin/deepseek-cli.rs"
name = "deepseek-cli"

[[bin]]
path = "src/bin/repo.rs"
name = "repo"

[[bin]]
path = "src/bin/transcribe.rs"
name = "transcribe"

[features]
local-tests = []

[dependencies]
streaming-iterator = "0.1.9"
env_logger = "0.10"
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
bitcoin_hashes = "0.12"
secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes", "global-context"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "chrono"] }
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
url = "2.4"
time = { version = "0.3", features = ["serde"] }
anyhow = "1.0"
askama = "0.12"
askama_axum = "0.4"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
axum-macros = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
native-tls = "0.2.13"
openssl = { version = "0.10.70", features = ["vendored"] }
pulldown-cmark = "0.9"
askama_escape = "0.1"
bytes = "1.5"
html-escape = "0.2"
tokio-tungstenite = "0.21"
hyper = { version = "1.2", features = ["full"] }
http-body-util = "0.1"
http = "1.0"
tokio-stream = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
termcolor = "1.4"
async-trait = "0.1"
git2 = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
colored = "2.1"
yansi = "0.5"
urlencoding = "2.1"
base64 = "0.21"
thiserror = "1.0"
tempfile = "3.10"
async-stream = "0.3"
regex = "1.10.2"
ignore = "0.4"  # Added ignore crate for .gitignore support
glob = "0.3"    # Added glob crate for pattern matching
serde_urlencoded = "0.7.1"
octocrab = "0.43.0"
oauth2 = "4.4"
cookie = "0.18"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0"
lazy_static = "1.4"
wiremock = "0.6.2"
axum-test = "17.1"
serial_test = "2.0"
