[project]
name = "openagents-harbor"
version = "0.1.0"
description = "Harbor agent adapters for MechaCoder - supports Claude Code CLI and Pi agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openagents_harbor"]

[tool.ruff]
line-length = 100
