[package]
name = "openagents-api"
version = "0.1.0"
edition = "2021"
description = "OpenAgents API — Cloudflare Workers (workers-rs)"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
include_dir = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
worker = "0.7"
