[package]
name = "openagents-api"
version = "0.1.0"
edition = "2021"
description = "OpenAgents API — Cloudflare Workers (workers-rs)"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
hmac = "0.12"
include_dir = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
sha2 = "0.10"
url = "2"
worker = { version = "0.7", features = ["d1", "http"] }
