[package]
name = "autopilot-desktop-wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Native WGPUI desktop app for Autopilot"

[[bin]]
name = "autopilot-desktop-wgpu"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wgpui = { path = "../../crates/wgpui", default-features = false, features = ["desktop"] }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
futures = { workspace = true }
autopilot_app = { path = "../../crates/autopilot_app" }
