[package]
name = "autopilot-desktop"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Native WGPUI desktop app for Autopilot (MVP shell)"

[[bin]]
name = "autopilot-desktop"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bech32 = "0.11"
bip39 = "2.2.0"
bitcoin = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
wgpui = { path = "../../crates/wgpui", default-features = false, features = ["desktop"] }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }

[package.metadata.bundle]
name = "Autopilot"
identifier = "com.openagents.autopilot"
icon = ["resources/icon.png"]
category = "public.app-category.productivity"
short_description = "Autopilot desktop app"
osx_minimum_system_version = "10.15"
