[package]
name = "autopilot-desktop"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Native WGPUI desktop app for Autopilot (MVP shell)"

[features]
default = []
rive-inspect-bin = []

[[bin]]
name = "autopilot-desktop"
path = "src/main.rs"

[[bin]]
name = "codex-live-harness"
path = "src/bin/codex_live_harness.rs"

[[bin]]
name = "spark-wallet-cli"
path = "src/bin/spark_wallet_cli.rs"

[[bin]]
name = "autopilot-codex-exec"
path = "src/bin/autopilot_codex_exec.rs"

[[bin]]
name = "autopilot-headless-compute"
path = "src/bin/autopilot_headless_compute.rs"

[[bin]]
name = "autopilotctl"
path = "src/bin/autopilotctl.rs"

[[bin]]
name = "autopilot-compute-mcp"
path = "src/bin/autopilot_compute_mcp.rs"

[[bin]]
name = "autopilot-throughput-bench"
path = "src/bin/autopilot_throughput_bench.rs"

[[bin]]
name = "autopilot-compiled-agent-harness"
path = "src/bin/autopilot_compiled_agent_harness.rs"

[[bin]]
name = "apple-architecture-explainer-reference-run"
path = "src/bin/apple_architecture_explainer_reference_run.rs"

[[bin]]
name = "rive_inspect"
path = "src/bin/rive_inspect.rs"
required-features = ["rive-inspect-bin"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
autopilot-spacetime = { path = "../../crates/autopilot-spacetime" }
codex-client = { path = "../../crates/codex-client" }
psionic-data = { workspace = true }
psionic-environments = { workspace = true }
psionic-eval = { workspace = true, features = ["full"] }
psionic-models = { workspace = true }
psionic-adapters = { workspace = true }
psionic-apple-fm = { workspace = true }
psionic-research = { workspace = true }
psionic-runtime = { workspace = true }
psionic-sandbox = { workspace = true }
psionic-serve = { workspace = true }
psionic-train = { workspace = true }
openagents-cad = { path = "../../crates/cad" }
openagents-compiled-agent = { path = "../../crates/openagents-compiled-agent" }
openagents-kernel-core = { path = "../../crates/openagents-kernel-core" }
openagents-provider-substrate = { path = "../../crates/openagents-provider-substrate" }
openagents-spark = { path = "../../crates/spark" }
nostr = { path = "../../crates/nostr/core" }
nostr-client = { path = "../../crates/nostr/client" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wgpui = { path = "../../crates/wgpui", default-features = false, features = ["desktop"] }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
keyring = { version = "3.6.2", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6.0"
reqwest = { workspace = true, features = ["blocking"] }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
bech32 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
cpal = "0.15"
rodio = "0.20"
bitcoin = { workspace = true }
lightning-invoice = "0.33.2"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.3"
futures-util = "0.3"
qrcode = { version = "0.12", default-features = false }
bip39 = "2.2"
tokio-tungstenite = "0.24"
rustls = { version = "0.23", features = ["ring"] }
tiny-skia = "0.11"
mdns-sd = "0.18.2"

[dev-dependencies]
tempfile = "3"

[package.metadata.bundle]
name = "Autopilot"
identifier = "com.openagents.autopilot"
icon = ["resources/icon.png"]
category = "public.app-category.productivity"
short_description = "Autopilot desktop app"
osx_minimum_system_version = "10.15"

[package.metadata.bundle.bin.autopilot-desktop]
name = "Autopilot"
identifier = "com.openagents.autopilot"
icon = ["resources/icon.png"]
category = "public.app-category.productivity"
short_description = "Autopilot desktop app"
osx_minimum_system_version = "10.15"
