[package]
name = "deck"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Browser-first WGPUI deck viewer for OpenAgents"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Window",
    "console",
] }
wgpui = { path = "../../crates/wgpui", default-features = false, features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpui = { path = "../../crates/wgpui", default-features = false }
