[package]
name = "nexus-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "OpenAgents Nexus control API for desktop sessions and sync token minting"

[dependencies]
anyhow.workspace = true
axum = "0.8"
hex.workspace = true
http = "1"
openagents-kernel-core = { path = "../../crates/openagents-kernel-core" }
openagents-kernel-proto = { path = "../../crates/openagents-kernel-proto" }
openagents-validator-service = { path = "../../crates/openagents-validator-service" }
rand.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
