[package]
name = "nexus-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "OpenAgents Nexus control API for desktop sessions and sync token minting"

[dependencies]
anyhow.workspace = true
axum = "0.8"
base64 = "0.22"
bip39 = "2.2.0"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
futures = "0.3"
hex.workspace = true
http = "1"
nostr = { path = "../../crates/nostr/core" }
nostr-client = { path = "../../crates/nostr/client" }
openagents-kernel-core = { path = "../../crates/openagents-kernel-core" }
openagents-kernel-proto = { path = "../../crates/openagents-kernel-proto" }
openagents-provider-substrate = { path = "../../crates/openagents-provider-substrate" }
openagents-validator-service = { path = "../../crates/openagents-validator-service" }
psionic-train-contract = { path = "../../crates/psionic-train-contract" }
rand.workspace = true
reqwest.workspace = true
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
