[package]
name = "nexus-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "OpenAgents Nexus Nostr relay service"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
hex.workspace = true
nexus-control = { path = "../nexus-control" }
nostr-rs-relay-upstream = { package = "nostr-rs-relay", path = "../../third_party/nostr-rs-relay" }
nostr = { path = "../../crates/nostr/core" }
reqwest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true

[dev-dependencies]
nostr-client = { path = "../../crates/nostr/client" }
tempfile = "3"
